objects/advpm__Participant__c.object
<CustomObject>
    <customHelpPage>advpm__HelpParticipant</customHelpPage>
    <fields>
        <fullName>Agency_Participant__c</fullName>
        <formula>INCLUDES(advpm__Role__c, &quot;Agency&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Litigation__c</fullName>
        <label>Secondary Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment_Litigation__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Business_Unit_Legal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster_Litigation__c</fullName>
        <label>Secondary Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cluster</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Relationship__c</fullName>
        <formula>advpm__Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacts_Email_Address__c</fullName>
        <formula>advpm__Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contacts Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacts_Mobile_Number__c</fullName>
        <formula>advpm__Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contacts Mobile Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correspondence_Email_Address__c</fullName>
        <description>CloudSmiths 
Email address that is being use to send out email notifications to the participants</description>
        <inlineHelpText>Email address that is being use to send out email notifications to the participants</inlineHelpText>
        <label>Correspondence Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExternalParticipantId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalParticipantId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_for_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact for Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only the roles &quot;Transaction Administrator&quot; and &quot;Transaction Manager&quot; receive notifications.   This setting does not pertain to any other roles.</inlineHelpText>
        <label>Receive Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment_Litigation__c</fullName>
        <label>Secondary Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cluster_Litigation__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signing_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signing Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_User__c</fullName>
        <label>Source User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Users_Contact_Details__c</fullName>
        <formula>advpm__Staff__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Users Contact Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Users_Division_Litigation__c</fullName>
        <formula>TEXT (advpm__Staff__r.Division__c)</formula>
        <label>Users Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Users_Email_Address_del__c</fullName>
        <formula>advpm__Staff__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Users Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Account_OwnerId__c</fullName>
        <formula>IF( NOT( ISBLANK( advpm__Account__c ) ), advpm__Account__r.OwnerId , &quot;&quot; )</formula>
        <label>Account OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__App_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>App Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Billable_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Contact_OwnerId__c</fullName>
        <formula>IF( NOT( ISBLANK( advpm__Contact__c ) ), advpm__Contact__r.OwnerId , &quot;&quot; )</formula>
        <label>Contact OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Legal_Hold__c</fullName>
        <formula>IF ( advpm__Matter__r.advpm__Legal_Hold__c , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <label>Matter Legal Hold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Status__c</fullName>
        <formula>TEXT( advpm__Matter__r.advpm__Status__c )</formula>
        <label>Matter Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter__c</fullName>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>advpm__Primary_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Client (DEPRECATED)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Responsible_Percentage__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Responsible Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>advpm__Role__c</fullName>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Guarantor</fullName>
                </value>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Account Bank</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Agent Bank</fullName>
                </value>
                <value>
                    <fullName>Asset Manager</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Banker</fullName>
                </value>
                <value>
                    <fullName>Business Unit Contact</fullName>
                </value>
                <value>
                    <fullName>Calculation Agent</fullName>
                </value>
                <value>
                    <fullName>CCMG</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>CIB Operations</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Client Service Consultant</fullName>
                </value>
                <value>
                    <fullName>Co-counsel</fullName>
                </value>
                <value>
                    <fullName>Corporate Service Manager</fullName>
                </value>
                <value>
                    <fullName>Counter Party (Borrower/Client)</fullName>
                </value>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                    <label>Credit Analyst</label>
                </value>
                <value>
                    <fullName>Credit Head</fullName>
                </value>
                <value>
                    <fullName>Cross Guarantor</fullName>
                </value>
                <value>
                    <fullName>Custodian</fullName>
                </value>
                <value>
                    <fullName>DCM</fullName>
                </value>
                <value>
                    <fullName>Defendant</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>ECA</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>External Legal Counsel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Participant</label>
    <listViews>
        <fullName>advpm__All</fullName>
        <columns>NAME</columns>
        <columns>advpm__Matter__c</columns>
        <columns>advpm__Account__c</columns>
        <columns>advpm__Contact__c</columns>
        <columns>advpm__Staff__c</columns>
        <columns>advpm__Primary_Client__c</columns>
        <columns>advpm__Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <recordTypes>
        <fullName>Contact_TMG</fullName>
        <active>true</active>
        <description>Record type for all Legal Participants(External)</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_T</fullName>
        <active>true</active>
        <description>To add Legal User as Participant</description>
        <label>User</label>
    </recordTypes>
    <recordTypes>
        <fullName>advpm__Account</fullName>
        <active>true</active>
        <description>To add Account as Participant</description>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>advpm__Contact</fullName>
        <active>true</active>
        <description>To add Contact as Participant</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>advpm__Staff</fullName>
        <active>true</active>
        <description>To add User as Participant</description>
        <label>User</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assign_Signing_Authority</fullName>
        <active>true</active>
        <errorConditionFormula>AND($UserRole.Name    &lt;&gt;   &quot;TMG - TA Deal Management - Governance and Doc Solution&quot;, $UserRole.Name    &lt;&gt;   &quot;TMG - TA Deal Management - Governance and Doc Solution TM&quot;,  Signing_Authority__c = TRUE)</errorConditionFormula>
        <errorMessage>Kindly note that you cannot assign Signing Authority if your Role is not TMG - TA Deal Management - Governance and Doc Solution.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Number_Validation</fullName>
        <active>true</active>
        <description>Participant Contact Number</description>
        <errorConditionFormula>NOT(ISBLANK( Contact_Number__c )) &amp;&amp; 
NOT(REGEX( Contact_Number__c , &quot;[0-9]{4,5}[&apos; &apos;][0-9]{3}[&apos; &apos;][0-9]{4,7}&quot;))</errorConditionFormula>
        <errorDisplayField>Contact_Number__c</errorDisplayField>
        <errorMessage>The correct format is - Country Code, Area Code Space Three Digits Space Remainder Digits. eg. 2711 237 1434</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Business_Fields_Are_Completed</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
  INCLUDES(advpm__Role__c,&quot;Matter Owner&quot;),
  OR(
     ISBLANK(TEXT(Business_Unit_Litigation__c)),
     ISBLANK(TEXT(Cluster_Litigation__c )),
     ISBLANK(TEXT(Segment_Litigation__c ))
), RecordType.DeveloperName = &quot;User&quot;
)</errorConditionFormula>
        <errorMessage>Please ensure you specify a &quot;Cluster&quot;, &quot;Segment&quot; and a &quot;Business Unit&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Business_Fields_Are_Completed2</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(TEXT(Cluster_Litigation__c ))</errorConditionFormula>
        <errorMessage>Please ensure you specify a &quot;Cluster&quot;, &quot;Segment&quot; and a &quot;Business Unit&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Legal_User_on_Legal_Matter_Check</fullName>
        <active>true</active>
        <description>Only Legal Users (where Profile contains Legal) can be added to a Legal Matter.</description>
        <errorConditionFormula>IF(OR(CONTAINS(advpm__Matter__r.RecordType.DeveloperName, &apos;Legal&apos;), CONTAINS(advpm__Matter__r.RecordType.DeveloperName, &apos;Litigation&apos;)) &amp;&amp; !CONTAINS(advpm__Staff__r.Profile.Name, &apos;Litigation&apos;) &amp;&amp; !CONTAINS(advpm__Staff__r.Profile.Name, &apos;Legal&apos;) &amp;&amp; !CONTAINS(advpm__Staff__r.Profile.Name, &apos;Content&apos;) &amp;&amp; !CONTAINS(advpm__Staff__r.Profile.Name, &apos;Support&apos;), TRUE, FALSE)</errorConditionFormula>
        <errorMessage>You only allowed to add a Legal/Litigation User as a Participant for a Legal/Litigation Matter</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Litigation_User_on_Matter_Check</fullName>
        <active>false</active>
        <description>Only Litigation Users  (where Profile contains Litigation) can be added to a Litigation Matter</description>
        <errorConditionFormula>IF(AND(CONTAINS(advpm__Matter__r.RecordType.DeveloperName, &apos;Litigation&apos;), !CONTAINS(advpm__Staff__r.Profile.Name, &apos;Litigation&apos;)), True, False)</errorConditionFormula>
        <errorMessage>You only allowed to add a Litigation User as a Participant for a Litigation Matter</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Contact_must_be_specified_TA</fullName>
        <active>false</active>
        <description>When a role is allocated to more than one participant, primary contact must be specified - Transaction Administrator</description>
        <errorConditionFormula>IF(
INCLUDES( advpm__Role__c , &quot;Transaction Administration&quot;), True,
      Primary_Contact_for_Role__c = FALSE)</errorConditionFormula>
        <errorDisplayField>Primary_Contact_for_Role__c</errorDisplayField>
        <errorMessage>Please specify  if you are the Primary Contact for Role</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Contact_must_be_specified_TM</fullName>
        <active>false</active>
        <description>When a role is allocated to more than one participant, primary contact must be specified - Transaction Manager</description>
        <errorConditionFormula>IF(
INCLUDES( advpm__Role__c , &quot;Transaction Management&quot;), True,
      Primary_Contact_for_Role__c = TRUE)</errorConditionFormula>
        <errorDisplayField>Primary_Contact_for_Role__c</errorDisplayField>
        <errorMessage>Please specify  if you are the Primary Contact for Role</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_One_Role_For_Each_Participant</fullName>
        <active>true</active>
        <errorConditionFormula>IF(INCLUDES(advpm__Role__c, &quot;Agency&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;CCMG&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;CIB Operations&quot;),1,0) +
IF(INCLUDES(advpm__Role__c, &quot;Client Service Consultant&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;RF Operations&quot;),1,0) +
IF(INCLUDES(advpm__Role__c, &quot;STCF Operations&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Client&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Credit Analyst&quot;),1,0)+
IF(INCLUDES(advpm__Role__c, &quot;DCM&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Finance&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Legal Counsel&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Portfolio Management Private Side&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Product&quot;),1,0)+
IF(INCLUDES(advpm__Role__c, &quot;Product Control Group&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Regulatory Capital&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Relationship Executive&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Relationship Executive Support&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Risk&quot;),1,0)+
IF(INCLUDES(advpm__Role__c, &quot;SPV&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;TAX&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Technical Accounting&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Transaction Administration&quot;),1,0)+
IF(INCLUDES(advpm__Role__c, &quot;Banker&quot;),1,0)+
IF(INCLUDES(advpm__Role__c, &quot;Corporate Service Manager&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Credit Head&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Sector Head&quot;),1,0) + 
IF(INCLUDES(advpm__Role__c, &quot;Regional Head&quot;),1,0)+
IF(INCLUDES(advpm__Role__c, &quot;Transaction Management&quot;),1,0) &gt;1</errorConditionFormula>
        <errorDisplayField>advpm__Role__c</errorDisplayField>
        <errorMessage>Please ensure that only one Role is selected for each Participant</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TMG_Participant_Role</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( advpm__Role__c ),
     (RecordType.DeveloperName  = &quot;Staff&quot;)
   )</errorConditionFormula>
        <errorDisplayField>advpm__Role__c</errorDisplayField>
        <errorMessage>Please ensure that you have specified a Role.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>advpm__Staff_Account_And_Contact_Verify</fullName>
        <active>true</active>
        <errorConditionFormula>OR
(
  AND
  (
   NOT( ISBLANK( advpm__Staff__c ) ), NOT( ISBLANK( advpm__Contact__c ) )
  ),
  AND
  (
   NOT( ISBLANK( advpm__Staff__c ) ), NOT( ISBLANK( advpm__Account__c ) ) 
  ),
  AND
  (
   NOT( ISBLANK( advpm__Contact__c ) ), NOT( ISBLANK( advpm__Account__c ) ) 
  )
)</errorConditionFormula>
        <errorMessage>Combination of &apos;User&apos;, &apos;Contact&apos; and &apos;Account&apos; cannot be saved as  Participant. Only 1 of them can be a participant.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>advpm__Staff_OR_Account_OR_Contact_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( advpm__Staff__c ), ISBLANK( advpm__Contact__c ), ISBLANK( advpm__Account__c ))</errorConditionFormula>
        <errorMessage>Either &apos;User&apos;, &apos;Contact&apos; or &apos;Account&apos; must be provided.</errorMessage>
    </validationRules>
</CustomObject>